# wkt-nest

./: CMakeLists.txt  README.md  build-rel.sh
include/wkt-nest/: bbpack-geometry.hpp  bbpack.hpp  geometry.hpp  wktio.hpp
src/: version_autogen.hpp
src/wkt-nest/: CMakeLists.txt  bbpack-geometry.cpp  bbpack.cpp  main.cpp  wktio.cpp
wasm/: Makefile  demo.html  wasm-exports.cpp
